# CS2-Crosshair-CLI

./: .gitignore  README.md  pyproject.toml
src/cs2_crosshair/: database.py  main.py  models.py  utils.py
