[project]
name = "cs2-crosshair-cli"
version = "0.1.0"
description = "python cli app for storing crosshairs for cs2 players"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "typer>=0.12.0",
    "tinydb>=4.8.0",
    "rich>=13.0.0",
    "readchar (>=4.2.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "cs2_crosshair", from = "src"}]

[tool.poetry.scripts]
cs = "cs2_crosshair.main:app"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"